2007-09-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoRootPage.m ([SOGoRootPage -defaultAction]): test
	whether the user is logged in and if so, redirect to his/her
	homepage.
	([SOGoRootPage -appendToResponse:inContext:]): removed useless
	method.

2007-09-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	+folderWithName:aNameandDisplayName:aDisplayNameinContainer:aContainer]):
	new method.
	([SOGoFolder -displayName]): new method.
	([SOGoFolder -delete]): accept to proceed only if nameInContainer
	!= "personal".

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder
	+folderWithName:aNameandDisplayName:aDisplayNameinContainer:aContainer]):
	renamed from "contactFolderWithName..." for compatibility with SOGoFolder.

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	+contactFolderWithName:aNameandDisplayName:aDisplayNameinContainer:aContainer]):
	removed method, reimplemented in SOGoFolder.
	([SOGoContactGCSFolder -displayName]): removed method,
	reimplemented in SOGoFolder.
	([-delete]): removed method, modified in SOGoFolder.

	* SoObjects/Contacts/SOGoContactFolders.[hm]: modified class to be
	a subclass of SOGoParentFolder.

	* SoObjects/SOGo/SOGoParentFolder.[hm]: new class module derived
	from SOGoContactFolders and modified to be more content-independent.

	* UI/MailerUI/UIxMailActions.m ([UIxMailActions -markMessageUnreadAction])
	([UIxMailActions -markMessageReadAction]): new methods moved from
	UIxMailListView and adapted to invoke the client object directly,
	since the previous versions had to to a lookup from the parent
	SOGoMailFolder.

	* UI/MailerUI/UIxMailListView.m ([-markMessageUnreadAction]): move
	method into UIxMailActions.
	([-markMessageReadAction]): same as above.
	([-viewAction]): removed useless method.
	([-javaScriptOK]): removed useless method.
	([-isJavaScriptRequest]): removed useless method.